# kafka_to_rabbitmq

./: Cargo.toml  README.md
src/: kafka.rs  main.rs  rabbitmq.rs
