[package]
name = "kafka_to_rabbitmq"
version = "0.1.0"
edition = "2021"
publish = ["artifactory-cache"]
authors = ["Ryan Ruckley <ryan.ruckley@optus.com.au>"]
description = "Microservice to pass data from Kafka to RabbitMQ"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9"
amqp = "0.1"
serde = { version = "1.0", features = ["derive"]}
